--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/timer"
+                android:textColor="@color/color_text"
                 android:textSize="36sp" />
 
         </com.borutsky.neumorphism.NeumorphicFrameLayout>
@@ -71,7 +72,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/reset"
-                android:textSize="16sp" />
+                android:textColor="@color/color_text"
+                android:textSize="20sp" />
 
         </com.borutsky.neumorphism.NeumorphicFrameLayout>
 
@@ -90,7 +92,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/start"
-                android:textSize="16sp" />
+                android:textColor="@color/color_text"
+                android:textSize="20sp" />
 
         </com.borutsky.neumorphism.NeumorphicFrameLayout>
 
@@ -126,8 +129,9 @@
                 android:checked="false"
                 android:gravity="center"
                 android:paddingVertical="18dp"
+                android:textColor="@color/color_text"
                 android:text="@string/soft"
-                android:textSize="16sp" />
+                android:textSize="20sp" />
 
             <RadioButton
                 android:id="@+id/radioButtonMediumCooked"
@@ -139,7 +143,8 @@
                 android:gravity="center"
                 android:paddingVertical="18dp"
                 android:text="@string/medium"
-                android:textSize="16sp" />
+                android:textColor="@color/color_text"
+                android:textSize="20sp" />
 
             <RadioButton
                 android:id="@+id/radioButtonHardCooked"
@@ -151,7 +156,8 @@
                 android:gravity="center"
                 android:paddingVertical="18dp"
                 android:text="@string/hard"
-                android:textSize="16sp" />
+                android:textColor="@color/color_text"
+                android:textSize="20sp" />
 
         </RadioGroup>
 
