Add dark mode support
Update screenshots

--- a/app/src/main/res/drawable/bg_radio_button_type_not_selected_left.xml
+++ b/app/src/main/res/drawable/bg_radio_button_type_not_selected_left.xml
@@ -7,6 +7,6 @@
     <gradient
         android:type="linear"
         android:angle="180"
-        android:startColor="@color/color_background"
-        android:endColor="@color/color_background_darker" />
+        android:startColor="?attr/colorSurface"
+        android:endColor="?attr/colorSecondaryContainer" />
 </shape>
