--- a/app/src/main/res/drawable/bg_radio_button_type_not_selected_right.xml
+++ b/app/src/main/res/drawable/bg_radio_button_type_not_selected_right.xml
@@ -6,6 +6,6 @@
         android:topRightRadius="10dp" />
     <gradient
         android:type="linear"
-        android:startColor="@color/color_background"
-        android:endColor="@color/color_background_darker" />
+        android:startColor="?attr/colorSurface"
+        android:endColor="?attr/colorSecondaryContainer" />
 </shape>
