--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,14 +4,17 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/color_text</item>
+        <item name="colorOnPrimary">@color/color_text_light</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/color_text</item>
+        <item name="colorOnSecondary">@color/color_text_light</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/color_background</item>
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/color_background_dark</item>
+        <item name="statusBarForeground">@color/color_background_light</item>
         <!-- Customize your theme here. -->
+        <item name="colorSurface">@color/color_background_dark</item>
+        <item name="colorOnSurface">@color/color_text_dark</item>
+        <item name="colorSecondaryContainer">@color/color_background_dark_2</item>
     </style>
 </resources>
