--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,13 @@
     <color name="color_start_button">#01A7A7</color>
     <color name="color_stop_button">#FF5456</color>
     <color name="color_selected_option">@color/color_start_button</color>
-    <color name="color_background">#EFEAD8</color>
-    <color name="color_text">#003232</color>
-    <color name="color_background_darker">#DFDBD0</color>
+    <!-- Light Mode Colors -->
+    <color name="color_background_light">#E8E8E8</color>
+    <color name="color_background_light_2">#D5D5D5</color>
+    <color name="color_text_light">@color/color_background_dark</color>
+    <!-- Dark Mode Colors -->
+    <color name="color_background_dark">#2E2F39</color>
+    <color name="color_background_dark_2">#202127</color>
+    <color name="color_text_dark">@color/color_background_light</color>
+
 </resources>
