--- a/app/src/main/res/drawable/bg_radio_button_type_selected_right.xml
+++ b/app/src/main/res/drawable/bg_radio_button_type_selected_right.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners
-        android:bottomRightRadius="5dp"
-        android:topRightRadius="5dp" />
+    android:shape="oval">
     <solid android:color="@color/color_selected_option" />
 </shape>
