--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,68 +99,62 @@
 
     </LinearLayout>
 
-    <com.borutsky.neumorphism.NeumorphicFrameLayout
-        android:id="@+id/radioButtonSection"
+    <RadioGroup
+        android:id="@+id/radioGroupEggCookType"
         android:layout_width="300dp"
-        android:layout_height="80dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="40dp"
+        android:elevation="24dp"
+        android:orientation="horizontal"
         app:background_color="?attr/colorSurface"
-        app:corner_radius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:shape="rectangle"
-        app:state="convex">
+        app:layout_constraintRight_toRightOf="parent">
 
-        <RadioGroup
-            android:id="@+id/radioGroupEggCookType"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:elevation="24dp"
-            android:orientation="horizontal">
+        <RadioButton
+            android:id="@+id/radioButtonSoftCooked"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/bg_radio_button_type_selector_left"
+            android:button="@android:color/transparent"
+            android:checked="false"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:paddingVertical="18dp"
+            android:text="@string/soft"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="20sp" />
 
-            <RadioButton
-                android:id="@+id/radioButtonSoftCooked"
-                android:layout_width="100dp"
-                android:layout_height="80dp"
-                android:background="@drawable/bg_radio_button_type_selector_left"
-                android:button="@android:color/transparent"
-                android:checked="false"
-                android:gravity="center"
-                android:paddingVertical="18dp"
-                android:textColor="?attr/colorOnSurface"
-                android:text="@string/soft"
-                android:textSize="20sp" />
+        <RadioButton
+            android:id="@+id/radioButtonMediumCooked"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="8dp"
+            android:background="@drawable/bg_radio_button_type_selector_middle"
+            android:button="@android:color/transparent"
+            android:checked="true"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:paddingVertical="18dp"
+            android:text="@string/medium"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="20sp" />
 
-            <RadioButton
-                android:id="@+id/radioButtonMediumCooked"
-                android:layout_width="100dp"
-                android:layout_height="80dp"
-                android:background="@drawable/bg_radio_button_type_selector_middle"
-                android:button="@android:color/transparent"
-                android:checked="true"
-                android:gravity="center"
-                android:paddingVertical="18dp"
-                android:text="@string/medium"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="20sp" />
+        <RadioButton
+            android:id="@+id/radioButtonHardCooked"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/bg_radio_button_type_selector_right"
+            android:button="@android:color/transparent"
+            android:checked="false"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:paddingVertical="18dp"
+            android:text="@string/hard"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="20sp" />
 
-            <RadioButton
-                android:id="@+id/radioButtonHardCooked"
-                android:layout_width="100dp"
-                android:layout_height="80dp"
-                android:background="@drawable/bg_radio_button_type_selector_right"
-                android:button="@android:color/transparent"
-                android:checked="false"
-                android:gravity="center"
-                android:paddingVertical="18dp"
-                android:text="@string/hard"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="20sp" />
+    </RadioGroup>
 
-        </RadioGroup>
-
-    </com.borutsky.neumorphism.NeumorphicFrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
