--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="color_selected_option">@color/color_start_button</color>
     <!-- Light Mode Colors -->
     <color name="color_background_light">#E8E8E8</color>
-    <color name="color_background_light_2">#D5D5D5</color>
+    <color name="color_background_light_2">#E0E0E0</color>
     <color name="color_text_light">@color/color_background_dark</color>
     <!-- Dark Mode Colors -->
     <color name="color_background_dark">#2E2F39</color>
