--- a/app/src/main/res/drawable/bg_radio_button_type_not_selected_left.xml
+++ b/app/src/main/res/drawable/bg_radio_button_type_not_selected_left.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <gradient
-        android:type="linear"
-        android:angle="135"
+        android:type="radial"
+        android:gradientRadius="100%p"
         android:startColor="?attr/colorSurface"
-        android:endColor="?attr/colorSecondaryContainer"/>
+        android:endColor="?attr/colorSecondaryContainer" />
 </shape>
