--- a/app/src/main/res/drawable/bg_radio_button_type_not_selected_middle.xml
+++ b/app/src/main/res/drawable/bg_radio_button_type_not_selected_middle.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="?attr/colorSurface" />
+    <gradient
+        android:type="linear"
+        android:angle="90"
+        android:startColor="?attr/colorSurface"
+        android:endColor="?attr/colorSecondaryContainer"/>
 </shape>
