--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,6 +106,7 @@
         android:layout_marginBottom="40dp"
         android:elevation="24dp"
         android:orientation="horizontal"
+        android:gravity="center_horizontal"
         app:background_color="?attr/colorSurface"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -113,8 +114,8 @@
 
         <RadioButton
             android:id="@+id/radioButtonSoftCooked"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="84dp"
+            android:layout_height="84dp"
             android:background="@drawable/bg_radio_button_type_selector_left"
             android:button="@android:color/transparent"
             android:checked="false"
@@ -127,9 +128,9 @@
 
         <RadioButton
             android:id="@+id/radioButtonMediumCooked"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginHorizontal="8dp"
+            android:layout_width="84dp"
+            android:layout_height="84dp"
+            android:layout_marginHorizontal="16dp"
             android:background="@drawable/bg_radio_button_type_selector_middle"
             android:button="@android:color/transparent"
             android:checked="true"
@@ -142,8 +143,8 @@
 
         <RadioButton
             android:id="@+id/radioButtonHardCooked"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="84dp"
+            android:layout_height="84dp"
             android:background="@drawable/bg_radio_button_type_selector_right"
             android:button="@android:color/transparent"
             android:checked="false"
