--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,7 @@
         <item name="colorSurface">@color/color_background_light</item>
         <item name="colorOnSurface">@color/color_text_light</item>
         <item name="colorSecondaryContainer">@color/color_background_light_2</item>
+        <item name="colorAccent">@color/color_start_button_dark</item>
     </style>
 
     <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
