--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/timer"
+                android:background="@null"
                 android:textColor="?attr/colorOnSurface"
                 android:textSize="36sp" />
 
@@ -107,7 +108,7 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal"
         app:background_color="?attr/colorSurface"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCustomTimer"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
@@ -156,30 +157,6 @@
 
     </RadioGroup>
 
-    <com.borutsky.neumorphism.NeumorphicFrameLayout
-        android:id="@+id/buttonCustomTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:layout_marginVertical="10dp"
-        android:paddingHorizontal="20dp"
-        app:background_color="?attr/colorSurface"
-        app:corner_radius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:shape="rectangle"
-        app:state="concave">
-
-        <TextView
-            android:id="@+id/tvCustomTimer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/custom"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="20sp" />
-
-    </com.borutsky.neumorphism.NeumorphicFrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
