--- a/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/app/src/main/res/layout/custom_alert_dialog.xml
@@ -1,10 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="300dp"
     android:layout_height="240dp"
     android:background="?attr/colorSurface"
-    android:paddingVertical="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingVertical="20dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,26 +14,16 @@
         android:textColor="?attr/colorOnSurface"
         android:textSize="28sp" />
 
-    <com.borutsky.neumorphism.NeumorphicFrameLayout
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonClose"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="20dp"
-        app:background_color="?attr/colorSurface"
-        app:corner_radius="10dp"
-        app:shape="rectangle"
-        app:state="convex">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/close"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="24sp" />
-
-    </com.borutsky.neumorphism.NeumorphicFrameLayout>
+        android:background="@drawable/bg_button"
+        android:text="@string/close"
+        android:textAllCaps="false"
+        android:textSize="24sp" />
 
 </LinearLayout>
