Refactor the app structure
Transition to fragment and view model.
Design changes.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragmentFrame"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,172 +8,4 @@
     android:clipChildren="false"
     tools:context=".MainActivity">
 
-    <com.borutsky.neumorphism.NeumorphicFrameLayout
-        android:id="@+id/blockTimer"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="80dp"
-        android:clipChildren="false"
-        android:text="Hello World!"
-        app:background_color="?attr/colorSurface"
-        app:corner_radius="40dp"
-        app:layout_constraintBottom_toTopOf="@+id/llButtons"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shape="rectangle"
-        app:state="flat">
-
-        <com.borutsky.neumorphism.NeumorphicFrameLayout
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            app:background_color="?attr/colorSurface"
-            app:shape="circle"
-            app:state="pressed">
-
-            <EditText
-                android:id="@+id/etTimer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@android:color/transparent"
-                android:layout_gravity="center"
-                android:enabled="false"
-                android:inputType="number"
-                android:maxLength="5"
-                android:text="@string/timer"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="36sp" />
-
-        </com.borutsky.neumorphism.NeumorphicFrameLayout>
-
-    </com.borutsky.neumorphism.NeumorphicFrameLayout>
-
-    <LinearLayout
-        android:id="@+id/llButtons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:clipChildren="false"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/blockTimer">
-
-        <com.borutsky.neumorphism.NeumorphicFrameLayout
-            android:id="@+id/buttonStop"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginHorizontal="20dp"
-            app:background_color="?attr/colorSurface"
-            app:corner_radius="10dp"
-            app:shape="circle"
-            app:state="concave">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/reset"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="20sp" />
-
-        </com.borutsky.neumorphism.NeumorphicFrameLayout>
-
-        <com.borutsky.neumorphism.NeumorphicFrameLayout
-            android:id="@+id/buttonStart"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginHorizontal="20dp"
-            app:background_color="?attr/colorSurface"
-            app:corner_radius="10dp"
-            app:shape="circle"
-            app:state="convex">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/start"
-                android:textColor="?attr/colorOnSurface"
-                android:textSize="20sp" />
-
-        </com.borutsky.neumorphism.NeumorphicFrameLayout>
-
-    </LinearLayout>
-
-    <RadioGroup
-        android:id="@+id/radioGroupEggCookType"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:elevation="24dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        app:background_color="?attr/colorSurface"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCustomTimer"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-
-        <RadioButton
-            android:id="@+id/radioButtonSoftCooked"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@drawable/bg_radio_button_type_selector_left"
-            android:button="@android:color/transparent"
-            android:checked="false"
-            android:elevation="10dp"
-            android:gravity="center"
-            android:paddingVertical="18dp"
-            android:text="@string/soft"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="18sp" />
-
-        <RadioButton
-            android:id="@+id/radioButtonMediumCooked"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginHorizontal="16dp"
-            android:background="@drawable/bg_radio_button_type_selector_middle"
-            android:button="@android:color/transparent"
-            android:checked="true"
-            android:elevation="10dp"
-            android:gravity="center"
-            android:paddingVertical="18dp"
-            android:text="@string/medium"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="18sp" />
-
-        <RadioButton
-            android:id="@+id/radioButtonHardCooked"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@drawable/bg_radio_button_type_selector_right"
-            android:button="@android:color/transparent"
-            android:checked="false"
-            android:elevation="10dp"
-            android:gravity="center"
-            android:paddingVertical="18dp"
-            android:text="@string/hard"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="18sp" />
-
-    </RadioGroup>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonCustomTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
-        android:textColor="@color/color_start_button"
-        android:background="@android:color/transparent"
-        android:padding="10dp"
-        android:text="@string/custom"
-        android:textAllCaps="false"
-        android:textSize="26sp"
-        app:corner_radius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
