--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -175,12 +175,13 @@
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
             android:value="6"
-            app:trackColor="@color/color_start_button_dark"
-            app:trackColorActive="@color/color_start_button"
-            app:thumbColor="@color/color_start_button"
+            android:valueFrom="0.2"
+            android:stepSize="0.2"
+            android:valueTo="12.0"
             app:haloColor="@color/color_start_button_dark"
-            android:valueFrom="0.1"
-            android:valueTo="12.0" />
+            app:thumbColor="@color/color_start_button"
+            app:trackColor="@color/color_start_button_dark"
+            app:trackColorActive="@color/color_start_button" />
 
     </LinearLayout>
 
